// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InterfaceGenerator generates the correct CheckBox code 1`] = `
"export interface CheckBoxExample {
  /**
   * GDPR Signed
   */
  gdprSigned: boolean;
}
"
`;

exports[`InterfaceGenerator generates the correct ComboBox code 1`] = `
"export interface ComboBoxExample {
  /**
   * Invited
   */
  invite?: \\"Yes\\" | \\"No\\" | \\"Maybe\\";
}
"
`;

exports[`InterfaceGenerator generates the correct ContentSelector code 1`] = `
"export interface ContentSelectorExample {
  /**
   * FAB button target
   */
  fabTarget?: string;
}
"
`;

exports[`InterfaceGenerator generates the correct ContentSelector code 2`] = `
"export interface ContentSelectorExample {
  /**
   * Members
   */
  members?: Array<string>;
}
"
`;

exports[`InterfaceGenerator generates the correct FieldSet code 1`] = `
"export interface FieldSetUser {
  /**
   * Runde 1
   */
  juryvote1?: string;

  /**
   * Runde 2
   */
  juryvote2?: string;
}
"
`;

exports[`InterfaceGenerator generates the correct ItemSet code 1`] = `
"export interface ItemSetUser {
  /**
   * Contact Info
   */
  contactInfo?: Array<{
    /**
     * Label
     */
    label?: string;

    /**
     * Phone Number
     */
    phoneNumber?: string;

    /**
     * Contact Info
     */
    contactInfo?: Array<{
      /**
       * Phone Number
       */
      phoneNumber?: string;
    }>;
  }>;
}
"
`;

exports[`InterfaceGenerator generates the correct OptionSet code 1`] = `
"export interface optionSet {
  /**
   * Multi-selection OptionSet
   */
  checkOptionSet: {
    /**
     * Selected
     */
    _selected: string | Array<string>;

    /**
     * Option 1
     */
    option_1?: {

    };

    /**
     * Option 2
     */
    option_2?: {
      /**
       * Content selector
       */
      contentSelector?: Array<string>;
    };

    /**
     * Option 3
     */
    option_3?: {
      /**
       * Text Area
       */
      textarea?: string;

      /**
       * Long
       */
      long?: number;
    };
  };
}
"
`;

exports[`InterfaceGenerator generates the correct RadioButton code 1`] = `
"export interface RadioButtonExample {
  /**
   * My RadioButton
   */
  myradiobutton?: \\"one\\" | \\"two\\";
}
"
`;

exports[`InterfaceGenerator generates the correct input code 1`] = `
"export interface Simple {
  /**
   * First name
   */
  firstName: string;

  /**
   * Last name
   */
  lastName?: string;

  /**
   * Age
   */
  age?: number;
}
"
`;

exports[`InterfaceGenerator generates the correct mixin code 1`] = `
"export interface MixedIn {
  /**
   * First Name
   */
  firstName: string;

  /**
   * Last Name
   */
  lastName: string;

  /**
   * Street address
   */
  addressLine?: string;

  /**
   * City
   */
  city: string;

  /**
   * Zip code
   */
  zipCode: string;

  /**
   * Country
   */
  country: string;
}
"
`;

exports[`InterfaceGenerator generates the correct mixin code for multilevel 1`] = `
"export interface MixedIn {
  /**
   * Street address
   */
  addressLine?: string;

  /**
   * City
   */
  city: string;

  /**
   * Zip code
   */
  zipCode: string;

  /**
   * Country
   */
  country: string;

  /**
   * Contact Info
   */
  contact_info?: Array<{
    /**
     * Label
     */
    label?: string;

    /**
     * Street address
     */
    addressLine?: string;

    /**
     * City
     */
    city: string;

    /**
     * Zip code
     */
    zipCode: string;

    /**
     * Country
     */
    country: string;
  }>;

  /**
   * Multi-selection OptionSet
   */
  checkOptionSet: {
    /**
     * Selected
     */
    _selected: string | Array<string>;

    /**
     * Option 1
     */
    option_1?: {

    };

    /**
     * Option 2
     */
    option_2?: {
      /**
       * Label
       */
      label?: string;

      /**
       * Street address
       */
      addressLine?: string;

      /**
       * City
       */
      city: string;

      /**
       * Zip code
       */
      zipCode: string;

      /**
       * Country
       */
      country: string;
    };

    /**
     * Option 3
     */
    option_3?: {
      /**
       * Street address
       */
      addressLine?: string;

      /**
       * City
       */
      city: string;

      /**
       * Zip code
       */
      zipCode: string;

      /**
       * Country
       */
      country: string;
    };
  };
}
"
`;
